--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* CSS Gerado */
+/* CSS Gerado Automaticamente */
 
 :root {
     --cor-fundo-principal: #121212;
@@ -162,7 +162,7 @@ tr:hover {
     display: none !important;
 }
 
-            /* Estilos Automáticos do Construtor */
+            .hidden { display: none !important; }
             .auto-card { display: flex; flex-direction: column; gap: 5px; padding: 15px; border: 1px solid #444; background: #222; border-radius: 5px; }
             .auto-titulo { margin: 0; color: var(--cor-destaque, #d23030); font-size: 1.2em; font-weight: bold; }
             .auto-subtitulo { margin: 0; color: #888; font-size: 0.9em; font-style: italic; margin-bottom: 10px; }
