--- a/style.css
+++ b/style.css
@@ -120,6 +120,7 @@ body {
 .search-input {
   width: 100%;
   max-width: 400px;
+  max-height: 600px;
   padding: 8px 12px;
   background-color: #111;
   color: white;
@@ -130,7 +131,7 @@ table {
   width: 100%;
   background-color: #2b2b2b;
   border-radius: 3px;
-  overflow: hidden;
+  overflow: auto;
   border-collapse: collapse;
 }
 thead {
